# MarsObsLabeling

./: .gitignore  README.md  pyproject.toml
configs/: app.yaml  classes.yaml
scripts/: build_overviews.py  export_labels.py
src/mars_labeler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/marslabeler/: __init__.py  app.py  classes.py  config.py
src/marslabeler/io/: __init__.py  overviews.py  preprocess.py  raster.py
src/marslabeler/model/: __init__.py  export.py  grid.py  labelstore.py  session.py
src/marslabeler/qa/: __init__.py  agreement.py  progress.py
src/marslabeler/ui/: __init__.py  controller.py  helpdialog.py  historypanel.py  legendpanel.py  loadingoverlay.py  mainwindow.py  panelcanvas.py  preprocessdialog.py  render.py  sidepreview.py
tests/: __init__.py  conftest.py  test_acceptance.py  test_classes.py  test_config.py  test_controller.py  test_export.py  test_grid.py  test_labelstore.py  test_qa.py  test_raster.py  test_session.py  test_ui_components.py  test_ui_render.py
