[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-labeler"
version = "0.1.0"
description = "Fast keyboard-driven GUI for block-level terrain labeling of HiRISE observations"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]

gui = [
    "PySide6>=6.0",
]

[project.scripts]
mars-label = "marslabeler.app:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
